<resources>
    <string name="app_name">Over-engineered Kitchen App</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ingredients">Ingredients</string>
    <string name="equipment">Equipment</string>
    <string name="chef">Chef</string>
    <string name="items">Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
